# sd

./: LICENSE  Makefile  README.md  sd.cabal  stack.yaml
app/: Main.hs
example/: AdServer.hs  adserver.hs  utils.hs
src/: CmdLine.hs  Graph.hs  GraphDump.hs  GraphOps.hs  Interpret.hs  Types.hs
