name:                sd
version:             0.1.0.0
license:             GPL
license-file:        LICENSE
author:              Ulf Leopold
maintainer:          336dev@gmail.com
copyright:           Copyright: (c) 2017 Ulf Leopold
category:            application
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Graph
                     , GraphDump
                     , GraphOps
                     , Types
                     , Interpret
                     , CmdLine
  build-depends:       base >= 4.7 && < 5
                     , heredoc
                     , hashable
                     , hashmap
                     , hint
                     , cmdargs
                     , filepath
                     , pretty-show
  default-language:    Haskell2010

executable sd
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sd
